--- a/EnhancedTwitchIntegration/manifest.json
+++ b/EnhancedTwitchIntegration/manifest.json
@@ -5,10 +5,10 @@
   "gameVersion": "1.6.1",
   "id": "SongRequestManager",
   "name": "Song Request Manager",
-  "version": "2.2.3",
+  "version": "2.4.0",
   "dependsOn": {
-    "BS Utils": "^1.4.0",
-    "BeatSaberMarkupLanguage": "^1.1.0"
+    "BeatSaberMarkupLanguage": "^1.1.0",
+    "BS Utils": "^1.4.0"
   },
   "features": [
     "print",
