added missing references

--- a/EnhancedTwitchIntegration/SongRequestManager.csproj
+++ b/EnhancedTwitchIntegration/SongRequestManager.csproj
@@ -62,6 +62,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Main.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+      <HintPath>$(BeatSaberDir)\Libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Polyglot, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Polyglot.dll</HintPath>
@@ -94,6 +97,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="websocket-sharp, Version=1.0.2.1803, Culture=neutral, PublicKeyToken=5660b08a1845a91e">
+      <HintPath>$(BeatSaberDir)\Libs\websocket-sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot\ChatCommands.cs" />
@@ -111,6 +117,10 @@
     <Compile Include="Bot\UnreleasedCode.cs" />
     <Compile Include="Bot\util.cs" />
     <Compile Include="ChatHandler.cs" />
+    <Compile Include="ChatHandlers\ChatCoreHandler.cs" />
+    <Compile Include="ChatHandlers\ChatMessage.cs" />
+    <Compile Include="ChatHandlers\IChatHandler.cs" />
+    <Compile Include="ChatHandlers\WebsocketHandler.cs" />
     <Compile Include="Config\RequestBotConfig.cs" />
     <Compile Include="Dispatcher.cs" />
     <Compile Include="Plugin.cs" />
