--- a/EnhancedTwitchIntegration/manifest.json
+++ b/EnhancedTwitchIntegration/manifest.json
@@ -10,6 +10,7 @@
     "BSIPA": "^4.2.0",
     "BeatSaberMarkupLanguage": "^1.5.4",
     "BS Utils": "^1.12.0",
-    "SongCore": "^3.5.0"
+    "SongCore": "^3.5.0",
+    "websocket-sharp": "^1.0.2"
   }
 }
